style.css
/* styles.css */

/* background*/

*{
    margin: 0px;
    padding: 0px;

}
body{
    /*background-image: linear-gradient(to bottom, #83898d, #c5c4c4);*/
    background-attachment: fixed;
    font-family: sans-serif;
    text-align: center;
    padding-bottom: 50px; /* Add space at the bottom */
}


.social-icons {
    margin: 0 10px;
    font-size: 30px; /* Set size of the icons */
    color: #0077b5; /* Blue color for LinkedIn and GitHub */
    position: relative;
}


/*Navbar settings */

.navbar {
    background-color: #1a1a1b;
    position: sticky; /*check this*/
    top: 0; /* Need this in order to get the navbar to stop at top when scrolling*/
    z-index: 1000; /* Set z-index to make sure the navbar is on top of everything */
    /*display: flex;
    justify-content: center;*/
    margin-bottom: 70px;
}

.navbar .nav-list {
    display: flex;
    list-style: none;
    margin: 0px;
    padding: 0px;
    justify-content: center;
}
/*
.navbar ul li{
    display: inline-block;
    position:relative;
}
*/

.navbar a{
    /*margin-right: 38px;*/
    text-decoration: none;
    color: white;
    /*display: block;*/
    display: inline-block;
    padding: 20px;
    text-align: center;
    width: 80px;

}

.navbar a:hover{
    color: white;
    background-color: rgb(105, 87, 123);
}


.navbar a.active{
    background-color: rgb(53, 35, 90);
    color: white;
}

.navbar .hamburger-toggle{
    color: white;
    font-size: 25px;
    display:none;
    padding: 15px;
}

.navbar .hamburger-toggle .x{
    display:none;
}


.navbar .hamburger-toggle:hover{
    color: white;
    background-color: rgb(105, 87, 123);
}

/* For mobile device viewing*/

@media screen and (max-width: 768px) {

    .navbar.open .nav-list{
        display: block;
        position: static;
        top: 400px;
        left: 0;
        flex-direction: column;
        width: 100%;
        text-align: center;
        background-color:#1a1a1b;
    }

    .navbar.open a {
        display: block;
        padding-left: 0px; 
        padding-right: 0px;
        width: 100%;
        text-align: center;
    }

    .navbar .hamburger-toggle{
        display: block;
    }

    .navbar.open .hamburger-toggle .x{
        display: block;
        
    }

    .navbar.open .hamburger-toggle .hamburger{
        display: none;
        padding: 10px;
    }

    .navbar .nav-list{
        display:none;
    }
}


/*Top Banner */
.banner-area {
    background-image: url("imgs/better_background.jpeg");
    background-size: cover;
    background-position: center ;
    background-attachment: local; 
    top: 0px;
    height: 200px;
    position: relative;
    width: 100%;
    padding-top: 75px;
}

.banner-area::after{
    content: "";
    position: absolute;
    top:0;
    left: 0;
    width: 100%;
    height: 100%;
    display: block;
    background-color: #211f56;
    opacity: 0.5;
    z-index:1;
}
.banner-area{
    position:relative;
}

.banner-area .bold-title-h1 {
    /*font-weight: bold;*/
    text-align: center;
    font-size: 50px !important; /* Optional: Adjust size as needed */
    position: relative;
    color: white;
    font-family: baskerville, serif;
    z-index: 10;
}


/*Content for this home section */
.content{
    margin-top: 125px; 
    /*margin-left: 5pc;
    margin-right: 5pc;*/
    position: relative;
    background: white;
    max-width: 1300px;
    margin: 0 auto;
    padding-top: 30px;;
}

.content h2.bold-title-h2 {
    font-weight: bold;
    text-align: center;
    font-size: 40px; /* Optional: Adjust size as needed */
}

.content p{
    padding: 2% 0;
    line-height: 30px;
    text-align: justify;
    
}

/* Style for Split Screen body */

.container-home {
    justify-content: center;
    padding: 0px;
    margin-top: -70px;
    display: grid;
    grid-template-columns: 1fr 2fr;
    gap: 50px;
    /*align-items: center;*/
    margin-left: 4pc;
    margin-right: 4pc;
}

.left-column {
    padding-right: 0px;
}

.profile-picture {
    width: 100%; /* Makes the picture responsive */
    max-width: 200px; /* Sets a max width for the picture */
    border-radius: 50%; /* Makes the picture circular */   
    margin-top: 30px;
}

.left-column .contact {
    margin-top: 7px;
}

.socials {
    margin-top: 10px;
}

.socials a {
    display: inline-block;
    margin-right: 10px;
    margin-left: 10px;
    text-decoration: none;
    color: rgb(0, 0, 14);
    font-size: 25px;
}

.right-column {
    margin-bottom: 0px;
}

/* For stacking the profile pick and About Grid */
@media screen and (max-width: 768px) {
    .container-home {
        grid-template-columns: 1fr; /* Stack items on mobile */
        padding-left: 3pc;
        padding-right: 3pc;
    }
}

/*Skill Section*/
/* For the skill breakdown */
.container-skill {
    display: grid;
    grid-template-columns: 1fr 7fr;
    gap: 0px;
    align-items: center;
    padding-left: 75px;
    padding-right: 75px;
    padding-bottom: 15px;
    
    max-width: 1300px;
    margin: 0 auto;
    margin-top: -30px;
}
.container-skill .header {
    font-weight: bold;
    text-align: left;
    color: rgb(93, 93, 93);
}
.container-skill .entry {
    margin: 1px 0;
    padding: 5px;
    border-radius: 5px;
    text-align: left;
    display: inline-block;
}
.container-skill .x-entry {
    background-color: #7cb9ef; /* Light blue */
    color: black; /* Navy */
}
.container-skill .link-entry a {
    color: black;
    text-decoration: none;
    font-weight: bold;
    text-align: left;
}
.container-skill .link-entry a:hover {
    text-decoration: underline;
}



/*Project Summaries*/
/* Styling for the summary section */
#summary {
    display: flex;
    justify-content: space-between;
    gap: 20px;
    font-family: "Courier New", Courier, monospace;
    background-color: #f9f9f9;
    padding: 20px;
    border: 1px solid #ddd;
    border-radius: 10px;
    margin: 20px 0;
}
/* Styling for each column */
#summary .column {
    flex: 1;
    padding: 10px;
    background-color: #ffffff;
    border-radius: 8px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    border: 1px solid #eaeaea;
}
/* Header styling */
#summary h2 {
    color: #2c3e50;
    font-size: 1.25em;
    margin-bottom: 10px;
    border-bottom: 2px solid #3498db;
    padding-bottom: 5px;
    text-align: center;
}
/* Paragraph styling */
#summary p {
    color: #4d4d4d;
    font-size: 0.95em;
    line-height: 1.6;
    margin: 0;
    text-align: justify;
}
/* Highlighting keywords */
#summary strong {
    color: #e74c3c;
    font-weight: bold;
}
/* Responsive Layout */
@media (max-width: 768px) {
    #summary {
        flex-direction: column; /* Stack columns vertically */
        gap: 10px;
        justify-content: center;
        align-items: center;
    }
    #summary .column {
        width: 100%; /* Make each column take up full width */

    }
}


/* Paper/Writeup Section CSS */
.pdf-card {
    display: flex;
    background-color: #d0d0d0;
    color: black;
    border-radius: 8px;
    overflow: hidden;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}
.pdf-thumbnail img {
    width: 90px;
    height: auto;
    object-fit: cover;
    padding: 8px;
}
.pdf-info {
    padding: 16px;
}
.pdf-info h2 {
    font-size: 18px;
    margin: 0 0 8px;
    line-height: 1.4;
}
.pdf-info p {
    margin: 4px 0;
}
.pdf-info em {
    font-size: 14px;
    color: #656565;
}
.pdf-link {
    text-decoration: none;
}

